# exercise-tracker-python

./: README.md  database.py  exercise_tracker.db  main.py  pyproject.toml
api/: exercise.py
public/: api-tests.js
views/: index.html
