[tool.poetry]
name = "exercise-tracker-python"
version = "0.1.0"
description = "Python exercise tracker"
authors = ["Ty Mick <ty@tymick.me>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
nanoid = "^2.0.0"

[tool.poetry.dev-dependencies]
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
